project/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-dep
spec:
  selector:
    matchLabels:
      app: project
  template:
    metadata:
      labels:
        app: project
    spec:
      volumes:
        - name: project-volume
          persistentVolumeClaim:
            claimName: project-claim
      containers:
        - name: project-backend
          image: anntey/project-backend:latest
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
          volumeMounts:
            - name: project-volume
              mountPath: /app/build/public
        - name: project-frontend
          image: anntey/project-frontend:latest
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
