project/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: project-ingress-frontend
  namespace: project
  annotations:
    traefik.ingress.kubernetes.io/rewrite-target: /project
spec:
  rules:
    - http:
        paths:
          - path: /project
            backend:
              serviceName: project-svc
              servicePort: 1234
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: project-ingress-api-static
  namespace: project
spec:
  rules:
    - http:
        paths:
          - path: /api
            backend:
              serviceName: project-svc
              servicePort: 2345
          - path: /static
            backend:
              serviceName: project-svc
              servicePort: 1234
